--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
-ContentBrowserDrawer.SelectedPaths=/Game/AI_Advanced/Objects
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1359,34 +1359,34 @@ GeometryProcessingInterfaces.LastCompileMethod=Unknown
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion.Zona_Expulsion
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2.Zona_Colocacion_2
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3.Zona_Colocacion_3
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_4.Interactuable_4
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4.Zona_Colocacion_4
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable.Interactuable
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2.Interactuable_2
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Interactuable_3
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3
-MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2
-MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion
-MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/Colocar_Zona
-MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Llave
-MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
-MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/Engranage
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
-MRUItem15=/Game/AI_Advanced/Objects/Mirror/Beam
-MRUItem16=/Game/AI_Advanced/Objects/Mirror/Beam_Light
-MRUItem17=/Game/AI_Advanced/Objects/Mirror/Mirror
-MRUItem18=/Niagara/DynamicInputs/ValueFromCurve/FloatFromCurve
-MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
+MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
+MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
+MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_4
+MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3
+MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2
+MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion
+MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Colocar_Zona
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
+MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Llave
+MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/Engranage
+MRUItem15=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
+MRUItem17=/Game/AI_Advanced/Objects/Mirror/Beam
+MRUItem18=/Game/AI_Advanced/Objects/Mirror/Beam_Light
+MRUItem19=/Game/AI_Advanced/Objects/Mirror/Mirror
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3981,6 +3981,32 @@ Llave_3_C.Tick=True
 Llave_3_C.Events=True
 Zona_Colocacion_2_C.Default=True
 Zona_Colocacion_3_C.Default=True
+Interactuable_4_C.Default=True
+Interactuable_4_C.Tick=True
+Interactuable_4_C.Replication=True
+Interactuable_4_C.Rendering=True
+Interactuable_4_C.Collision=True
+Interactuable_4_C.Actor=True
+Interactuable_4_C.Input=True
+Interactuable_4_C.HLOD=True
+Interactuable_4_C.Physics=True
+Interactuable_4_C.WorldPartition=True
+Interactuable_4_C.Events=True
+Interactuable_4_C.Cooking=False
+Interactuable_4_C.DataLayers=False
+Zona_Colocacion_4_C.Default=True
+Zona_Colocacion_4_C.Tick=True
+Zona_Colocacion_4_C.Replication=True
+Zona_Colocacion_4_C.Rendering=True
+Zona_Colocacion_4_C.Collision=True
+Zona_Colocacion_4_C.Actor=True
+Zona_Colocacion_4_C.Input=True
+Zona_Colocacion_4_C.HLOD=True
+Zona_Colocacion_4_C.Physics=True
+Zona_Colocacion_4_C.WorldPartition=True
+Zona_Colocacion_4_C.Events=True
+Interactuable_2_C.Cooking=True
+Interactuable_2_C.DataLayers=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -4149,10 +4175,10 @@ CapsuleComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object\" \"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object\" "
@@ -4570,8 +4596,8 @@ EditorSkeletonNotifyObj="\"Object\" "
 MaterialEditorSettings="\"Object\" "
 Interactuable_C="\"Object\" "
 UI_Boton_Interactuar_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Interactuable_2_C="\"Object\" "
-Interactuable_3_C="\"Object\" "
+Interactuable_2_C="\"Object\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Interactuable_3_C="\"Object\" \"Object.Actor.Tags\" "
 SplineMeshComponent="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -4604,6 +4630,7 @@ MovieSceneBindingOverrides="\"Object\" "
 DefaultLevelSequenceInstanceData="\"Object\" "
 Llave_2_C=
 Llave_3_C=
+Interactuable_4_C=
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -5104,6 +5131,8 @@ LevelSequenceBurnInOptions=
 MovieSceneBindingOverrides=
 DefaultLevelSequenceInstanceData=
 K2Node_Timeline=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's
+Interactuable_4_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's,CameraComponent.PostProcess.Lens
+Zona_Colocacion_4_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -5347,6 +5376,8 @@ None=======
 /Game/ThirdPerson/Blueprints/Equipamiento/Engranage.Engranage=0
 /Game/AI_Advanced/Objects/Mirror/Objeto_Interactuable.Objeto_Interactuable=0
 /Game/ThirdPerson/Blueprints/Equipamiento/Llave_3.Llave_3=1
+/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_4.Interactuable_4=0
+/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4.Zona_Colocacion_4=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5767,7 +5798,7 @@ WindowSize=X=1341.000 Y=781.000
 WindowSize=X=1312.800 Y=752.800
 WindowSize=X=1350.000 Y=790.000
 WindowSize=X=1356.000 Y=796.000
-WindowSize=X=1357.600 Y=797.600
+WindowSize=X=1362.400 Y=802.400
 None=======
 None=======
 None=======
