Implementacion de algoritmo espejos

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
-ContentBrowserDrawer.SelectedPaths=/Game/AI_Advanced/Objects
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -230,7 +230,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/Test
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2024.04.02-12.48.03
+Hunt_for_blood.TimeStamp=2024.04.23-12.35.36
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.01.08-18.19.03
 StorageServerClient.LastCompileMethod=External
@@ -1359,15 +1359,13 @@ GeometryProcessingInterfaces.LastCompileMethod=Unknown
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/AI_Advanced/Objects/Interruptor_2.Interruptor_2
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Objeto_Interactuable.Objeto_Interactuable
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Test
-MRUItem1=/Game/AI_Advanced/Objects/Interruptor
-MRUItem2=/Game/AI_Advanced/Objects/Palanca
-MRUItem3=/Game/AI_Advanced/Objects/Objeto_Interactuable
+MRUItem0=/Game/AI_Advanced/Objects/Objeto_Interactuable
+MRUItem1=/Game/Maps/Test
+MRUItem2=/Game/AI_Advanced/Objects/Interruptor
+MRUItem3=/Game/AI_Advanced/Objects/Palanca
 MRUItem4=/Game/AI_Advanced/Objects/Interruptor_2
 MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem6=/Game/ThirdPerson/Maps/Lvl01
@@ -6020,7 +6018,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -6103,7 +6101,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/Boyga/Documents/GitHub/Hunt_for_blood/Content/ThirdPerson/Maps
 UNR=../../../../../../Users/rmsl8/Documents/GitHub/Hunt_for_blood/Content/ThirdPerson/Maps
-UNR=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/Maps
+UNR=../../../../../../Users/Alumno/Documents/GitHub/Hunt_for_blood/Content/Maps
 None=======
 None=======
 BRUSH=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/
@@ -6120,8 +6118,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
