Audios de ayuda

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
-ContentBrowserDrawer.SelectedPaths=/Game/Maps
+ContentBrowserDrawer.SelectedPaths=/Game/Sounds
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -227,7 +227,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
 Hunt_for_blood.TimeStamp=2024.04.23-12.35.36
@@ -1356,32 +1356,32 @@ GeometryProcessingInterfaces.TimeStamp=2023.10.07-13.12.55
 GeometryProcessingInterfaces.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Objeto_Interactuable.Objeto_Interactuable
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI_Advanced/Objects/Objeto_Interactuable
-MRUItem1=/Game/Maps/Test
-MRUItem2=/Game/AI_Advanced/Objects/Interruptor
-MRUItem3=/Game/AI_Advanced/Objects/Palanca
-MRUItem4=/Game/AI_Advanced/Objects/Interruptor_2
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/ThirdPerson/Maps/Lvl01
-MRUItem7=/Game/Maps/Lvl01
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_4
-MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_3
-MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_2
-MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto
-MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba_3
-MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
-MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/Llave_3
-MRUItem15=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion
-MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
-MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3
-MRUItem18=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2
-MRUItem19=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba_2
+MRUItem0=/Game/Sounds/Beam
+MRUItem1=/Game/Sounds/light-sabre-77103_GSm8H7nC
+MRUItem2=/Game/Sounds/Beram
+MRUItem3=/Game/AI_Advanced/Objects/Objeto_Interactuable
+MRUItem4=/Game/Sounds/Beam_2
+MRUItem5=/Game/Sounds/Light_Beam
+MRUItem6=/Game/Sounds/beam-sequence-105586
+MRUItem7=/Game/Maps/Test
+MRUItem8=/Game/AI_Advanced/Objects/Interruptor
+MRUItem9=/Game/AI_Advanced/Objects/Palanca
+MRUItem10=/Game/AI_Advanced/Objects/Interruptor_2
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem12=/Game/ThirdPerson/Maps/Lvl01
+MRUItem13=/Game/Maps/Lvl01
+MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_4
+MRUItem15=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_3
+MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_2
+MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto
+MRUItem18=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba_3
+MRUItem19=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -4232,6 +4232,27 @@ PuzlePrueba_3_C.Networking=True
 Objeto_Interactuable_C.Cooking=True
 Objeto_Interactuable_C.DataLayers=True
 Light.Actor=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Memory=True
+SoundCue.Effects=True
+SoundCue.Voice Management=True
+SoundCue.Developer=True
+MediaPlayer.Playback=True
+MediaPlayer.ViewSettings=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -4863,6 +4884,13 @@ Objecto_3_C="\"Object\" "
 WidgetInteractionComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 NewPluginDescriptorData="\"Object\" "
 Face_AnimBP_C="\"Object\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
+MediaPlayer="\"Object\" "
+SoundCue="\"Object\" "
+SoundBase="\"Object\" "
+SoundWave="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/Maps/Test
@@ -4877,7 +4905,7 @@ MRUItem7=/Game/ThirdPerson/Maps/Level_Tester
 [MessageLog]
 LastLogListing=FBXImport
 LastLogListing=PIE
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 None=======
 
@@ -4934,6 +4962,7 @@ WidgetComponent.UserInterface=False
 Objecto_3_C.Collision=True
 Interruptor_C.Actor=True
 SkeletalMeshComponent.Animation=True
+FileMediaSource.File=False
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens
@@ -4983,7 +5012,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Var
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,SceneComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's,CameraComponent.PostProcess.Lens,Objecto_C.TransformCommon.Transform,Objeto_Interactuable_C.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,EdGraph.Inputs.CCD16304446EF7D32C12F6A8C27BB8FB
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PostProcessVolume.Lens.Lens
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,SceneComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's,CameraComponent.PostProcess.Lens,Objecto_C.TransformCommon.Transform,Objeto_Interactuable_C.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,EdGraph.Inputs.CCD16304446EF7D32C12F6A8C27BB8FB
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PostProcessVolume.Lens.Lens,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's,CameraComponent.PostProcess.Lens,Objecto_C.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -5657,6 +5686,9 @@ None=======
 /Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba_2.PuzlePrueba_2=0
 /Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba_3.PuzlePrueba_3=0
 /Game/ThirdPerson/Blueprints/Equipamiento/Objecto_4.Objecto_4=0
+/Game/Sounds/Light_Beam.Light_Beam=1
+/Game/Sounds/Beam_2.Beam_2=1
+/Game/Sounds/Beam.Beam=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
