--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
-ContentBrowserDrawer.SelectedPaths=/Game/Sounds
+ContentBrowserDrawer.SelectedPaths=/Game/AI_Advanced/Objects
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -227,7 +227,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/ThirdPerson/Maps/Test_for_mirrors
 
 [ModuleFileTracking]
 Hunt_for_blood.TimeStamp=2024.04.23-12.35.36
@@ -1359,31 +1359,29 @@ GeometryProcessingInterfaces.LastCompileMethod=Unknown
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4.Zona_Colocacion_4
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/AI_Advanced/Objects/Objeto_Interactuable.Objeto_Interactuable
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
-MRUItem2=/Game/Sounds/Door_Open
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem4=/Game/Sounds/Beam
-MRUItem5=/Game/Sounds/light-sabre-77103_GSm8H7nC
-MRUItem6=/Game/Sounds/Beram
-MRUItem7=/Game/AI_Advanced/Objects/Objeto_Interactuable
-MRUItem8=/Game/Sounds/Beam_2
-MRUItem9=/Game/Sounds/Light_Beam
-MRUItem10=/Game/Sounds/beam-sequence-105586
-MRUItem11=/Game/Maps/Test
-MRUItem12=/Game/AI_Advanced/Objects/Interruptor
-MRUItem13=/Game/AI_Advanced/Objects/Palanca
-MRUItem14=/Game/AI_Advanced/Objects/Interruptor_2
-MRUItem15=/Game/ThirdPerson/Maps/Lvl01
-MRUItem16=/Game/Maps/Lvl01
-MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_4
-MRUItem18=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_3
-MRUItem19=/Game/ThirdPerson/Blueprints/Equipamiento/Objecto_2
+MRUItem0=/Game/Sounds/Beam
+MRUItem1=/Game/AI_Advanced/Objects/Objeto_Interactuable
+MRUItem2=/Game/ThirdPerson/Maps/Test_for_mirrors
+MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem4=/Game/ThirdPerson/Maps/Lvl01
+MRUItem5=/Game/ThirdPerson/Maps/Main
+MRUItem6=/Game/ThirdPerson/Maps/Boss_Tester
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
+MRUItem9=/Game/Sounds/Door_Open
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
+MRUItem11=/Game/Sounds/light-sabre-77103_GSm8H7nC
+MRUItem12=/Game/Sounds/Beram
+MRUItem13=/Game/Sounds/Beam_2
+MRUItem14=/Game/Sounds/Light_Beam
+MRUItem15=/Game/Sounds/beam-sequence-105586
+MRUItem16=/Game/Maps/Test
+MRUItem17=/Game/AI_Advanced/Objects/Interruptor
+MRUItem18=/Game/AI_Advanced/Objects/Palanca
+MRUItem19=/Game/AI_Advanced/Objects/Interruptor_2
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -4408,7 +4406,7 @@ BP_sistema_Equipamiento_C.Activation=True
 BP_sistema_Equipamiento_C.Cooking=True
 BP_sistema_Equipamiento_C.Events=True
 DataAsset="\"Object\" "
-Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -4429,10 +4427,10 @@ PrimitiveComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object\" "
 ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ActorComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -4895,19 +4893,20 @@ SoundBase="\"Object\" "
 SoundWave="\"Object\" "
 
 [MRU]
-MRUItem0=/Game/Maps/Test
-MRUItem1=/Game/ThirdPerson/Maps/Lvl01
-MRUItem2=/Game/Maps/Lvl01
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem4=/Game/ThirdPerson/Maps/Main
-MRUItem5=/Engine/Maps/Entry
-MRUItem6=/Game/ThirdPerson/Maps/Boss_Tester
-MRUItem7=/Game/ThirdPerson/Maps/Level_Tester
+MRUItem0=/Game/ThirdPerson/Maps/Test_for_mirrors
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem2=/Game/ThirdPerson/Maps/Lvl01
+MRUItem3=/Game/ThirdPerson/Maps/Main
+MRUItem4=/Game/ThirdPerson/Maps/Boss_Tester
+MRUItem5=/Game/Maps/Test
+MRUItem6=/Game/Maps/Lvl01
+MRUItem7=/Engine/Maps/Entry
+MRUItem8=/Game/ThirdPerson/Maps/Level_Tester
 
 [MessageLog]
 LastLogListing=FBXImport
 LastLogListing=PIE
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 None=======
 
@@ -6136,7 +6135,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/Boyga/Documents/GitHub/Hunt_for_blood/Content/ThirdPerson/Maps
 UNR=../../../../../../Users/rmsl8/Documents/GitHub/Hunt_for_blood/Content/ThirdPerson/Maps
-UNR=../../../../../../Users/Alumno/Documents/GitHub/Hunt_for_blood/Content/Maps
+UNR=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/ThirdPerson/Maps
 None=======
 None=======
 BRUSH=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/
